- fixed bug in SCIPcopyConss (valid was not initialized to TRUE)
- fixed bug in reader_mps: indicator constraints do not output the slack variables anymore
- fixed bug in heur_undercover: removed option globalbounds, since we are not allowed to relax bounds at a probing node
- fixed bug in SCIPcopyConss: copy all active constraints (including disabled ones)

parameters:
- added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
- added possible value 'e' for <constraints/soc/nlpform> to enable convex exponential-sqrt form for SOC constraint representation in NLP
- added parameter <constraints/indicator/removeIndicators> to remove indicator constraints if corresponding vub has been added
- change default value of parameter "nodeselection/restartdfs/selectbestfreq" 100
- added parameter "nodeselection/restartdfs/countonlyleafs" in node selector restart dfs which can be used to select 
  the counting process of processed nodes 

SCIP version 2.0.0
===============

interface:
- new method SCIPbranchruleGetNRelaxCalls() to get the total number of times, a particular branching rule was called 
  on a relaxation solutions
- new method SCIPpermuteArray() that randomly shuffles an array using the Fisher-Yates algorithm
- new method SCIPgetRandomSubset() that draws a random subset of disjoint elements from a given set of disjoint elements
- new method SCIPpermuteProb() that randomly permutes constraints and variables
- new method SCIPrestartSolve() that allows the user to manually restart the solving process
- new method SCIPbranchRelax() to branch on a relaxation solution
- new method SCIPbranchVarVal() to branch on an arbitrary value within the variable's bounds
- new method SCIPbranchGetBranchingPoint() and SCIPgetBranchingPoint() to select branching point for a variable,
  e.g., ensure branching point is inside the interval for a continuous variable